[gd_scene load_steps=21 format=3 uid="uid://dr515hae6jcqq"]

[ext_resource type="Script" uid="uid://dkoaawlxcqbet" path="res://Scripts/Levels/level_transition.gd" id="1_5sulw"]
[ext_resource type="Shader" uid="uid://cgu01x5mw71sg" path="res://Scripts/Shader/circle_zoom.gdshader" id="2_pugve"]
[ext_resource type="Texture2D" uid="uid://c55lpnc8oyrx0" path="res://Assets/Sprites/Background/parallax_background_relief_v6.3.png" id="4_3lseo"]
[ext_resource type="FontFile" uid="uid://dy38kvvl78usv" path="res://Assets/Sprites/UI/Font/CaesarDressing-Regular.ttf" id="5_d6mj7"]
[ext_resource type="Texture2D" uid="uid://bv2qlalwmf8ub" path="res://Assets/Sprites/Background/parallax_foreground_top_v3.png" id="5_pt4jt"]
[ext_resource type="Texture2D" uid="uid://n8eiu7h0165d" path="res://Assets/Sprites/Background/parallax_background_pillars1_v2.4.3.png" id="5_t20qx"]
[ext_resource type="Shader" uid="uid://sip0qjm0fnf7" path="res://Scenes/Artists Test Scenes/Parallax.tres" id="6_u5ffc"]
[ext_resource type="Texture2D" uid="uid://cdn5gf2hfjbtk" path="res://Assets/Sprites/Background/deco_foreground_vines_p1_v1.png" id="7_3wff0"]
[ext_resource type="Texture2D" uid="uid://bccur2f2fonyw" path="res://Assets/Sprites/Background/deco_foreground_vines_p2_v1.png" id="8_a332d"]
[ext_resource type="Texture2D" uid="uid://c4hbwyp6rfdnd" path="res://Assets/Sprites/Background/parallax_foreground_bottom_v5.png" id="9_qlshg"]
[ext_resource type="Script" uid="uid://dotgui36uv4k6" path="res://Scripts/UI/game_finished_cam.gd" id="10_bl74h"]

[sub_resource type="Animation" id="Animation_yey1y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade_Rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Circle_Zoom_Rect:material:shader_parameter/circle_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Game_Finished/Control/thx_label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Game_Finished/Control/thx_label:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_fc21i"]
resource_name = "circle_zoom"
length = 2.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Circle_Zoom_Rect:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.4, 0.075]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fade_Rect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 2.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_7wc2n"]
resource_name = "fade_from_black"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade_Rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_t5dua"]
resource_name = "fade_to_black"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade_Rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_ndhu5"]
resource_name = "fade_to_black_restart"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade_Rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.321728, 0.321728, 0.321728, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_86vo3"]
resource_name = "thx_text"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Game_Finished/Control/thx_label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 3, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Game_Finished/Control/thx_label:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.4, 2.46667, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bbiu7"]
_data = {
&"RESET": SubResource("Animation_yey1y"),
&"circle_zoom": SubResource("Animation_fc21i"),
&"fade_from_black": SubResource("Animation_7wc2n"),
&"fade_to_black": SubResource("Animation_t5dua"),
&"fade_to_black_restart": SubResource("Animation_ndhu5"),
&"thx_text": SubResource("Animation_86vo3")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7mgqk"]
shader = ExtResource("2_pugve")
shader_parameter/circle_size = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q6ghb"]
shader = ExtResource("6_u5ffc")
shader_parameter/Wind_Strenght = 50.0

[node name="Level_Transition" type="CanvasLayer"]
process_mode = 3
layer = 4
script = ExtResource("1_5sulw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bbiu7")
}

[node name="Fade_Rect" type="ColorRect" parent="."]
z_index = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="Circle_Zoom_Rect" type="ColorRect" parent="."]
z_index = 4
material = SubResource("ShaderMaterial_7mgqk")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1060.0
offset_top = -1816.0
offset_right = 1380.0
offset_bottom = 1744.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Game_Finished" type="Node2D" parent="."]
script = ExtResource("10_bl74h")

[node name="Parallax" type="Node2D" parent="Game_Finished"]
position = Vector2(0.3, 0)

[node name="Background Relief" type="ParallaxBackground" parent="Game_Finished/Parallax"]
layer = -1

[node name="Parallax Relief" type="ParallaxLayer" parent="Game_Finished/Parallax/Background Relief"]
motion_scale = Vector2(0.3, 1)
motion_mirroring = Vector2(3840, 0)

[node name="parallax_foreground_relief" type="Sprite2D" parent="Game_Finished/Parallax/Background Relief/Parallax Relief"]
position = Vector2(1280, 720)
texture = ExtResource("4_3lseo")
region_rect = Rect2(0, 0, 7680, 1440)

[node name="Parallax Pillars" type="ParallaxLayer" parent="Game_Finished/Parallax/Background Relief"]
z_index = 1
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(2560, 0)

[node name="parallax_foreground_pillars" type="Sprite2D" parent="Game_Finished/Parallax/Background Relief/Parallax Pillars"]
texture = ExtResource("5_t20qx")
centered = false
region_rect = Rect2(0, 0, 7680, 1440)

[node name="ParallaxLayer" type="ParallaxLayer" parent="Game_Finished/Parallax/Background Relief"]
position = Vector2(1536, 742)
motion_scale = Vector2(0.3, 0)

[node name="Control" type="Control" parent="Game_Finished/Parallax/Background Relief/ParallaxLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Production" type="Label" parent="Game_Finished/Parallax/Background Relief/ParallaxLayer/Control"]
layout_mode = 0
offset_left = -256.0
offset_top = -102.0
offset_right = 35.0
offset_bottom = 155.0
theme_override_fonts/font = ExtResource("5_d6mj7")
theme_override_font_sizes/font_size = 50
text = "Production


Yunus Krüger"
horizontal_alignment = 1

[node name="Design" type="Label" parent="Game_Finished/Parallax/Background Relief/ParallaxLayer/Control"]
layout_mode = 0
offset_left = 256.0
offset_top = -102.0
offset_right = 547.0
offset_bottom = 155.0
theme_override_fonts/font = ExtResource("5_d6mj7")
theme_override_font_sizes/font_size = 50
text = "Level Design

Erik Vogler"
horizontal_alignment = 1

[node name="Programming" type="Label" parent="Game_Finished/Parallax/Background Relief/ParallaxLayer/Control"]
layout_mode = 0
offset_left = 704.0
offset_top = -102.0
offset_right = 1139.0
offset_bottom = 155.0
theme_override_fonts/font = ExtResource("5_d6mj7")
theme_override_font_sizes/font_size = 50
text = "Programming 

Kester Karpf
Stanislaw Preller"
horizontal_alignment = 1

[node name="Character" type="Label" parent="Game_Finished/Parallax/Background Relief/ParallaxLayer/Control"]
layout_mode = 0
offset_left = 1280.0
offset_top = -102.0
offset_right = 1661.0
offset_bottom = 220.0
theme_override_fonts/font = ExtResource("5_d6mj7")
theme_override_font_sizes/font_size = 50
text = "Character

Jessica Strey"
horizontal_alignment = 1

[node name="Environment" type="Label" parent="Game_Finished/Parallax/Background Relief/ParallaxLayer/Control"]
layout_mode = 0
offset_left = 1855.0
offset_top = -102.0
offset_right = 2245.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("5_d6mj7")
theme_override_font_sizes/font_size = 50
text = "Environment

Franziska Weckert"
horizontal_alignment = 1

[node name="UI_UX_VFX" type="Label" parent="Game_Finished/Parallax/Background Relief/ParallaxLayer/Control"]
layout_mode = 0
offset_left = 2431.0
offset_top = -102.0
offset_right = 2733.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("5_d6mj7")
theme_override_font_sizes/font_size = 50
text = "UI/UX AND VFX

Christina Roß"
horizontal_alignment = 1

[node name="Music_sound" type="Label" parent="Game_Finished/Parallax/Background Relief/ParallaxLayer/Control"]
layout_mode = 0
offset_left = 2944.0
offset_top = -102.0
offset_right = 3246.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("5_d6mj7")
theme_override_font_sizes/font_size = 50
text = "Music and sound

Nico Holtkamp
Stanislaw Preller"
horizontal_alignment = 1

[node name="thx_label" type="Label" parent="Game_Finished/Parallax/Background Relief/ParallaxLayer/Control"]
texture_filter = 4
layout_mode = 0
offset_left = 3656.0
offset_top = -102.0
offset_right = 4459.0
offset_bottom = -16.0
theme_override_fonts/font = ExtResource("5_d6mj7")
theme_override_font_sizes/font_size = 70
text = "THANK YOU FOR PLAYING! :)"
horizontal_alignment = 1

[node name="Foreground Vines Back" type="ParallaxBackground" parent="Game_Finished/Parallax"]
layer = 2

[node name="Parallax Bottom" type="ParallaxLayer" parent="Game_Finished/Parallax/Foreground Vines Back"]
motion_scale = Vector2(1.2, 1)
motion_mirroring = Vector2(2560, 0)

[node name="parallax_foreground_top" type="Sprite2D" parent="Game_Finished/Parallax/Foreground Vines Back/Parallax Bottom"]
texture = ExtResource("5_pt4jt")
centered = false
region_rect = Rect2(0, 0, 7680, 1440)

[node name="parallax_foreground_vines_p1" type="Sprite2D" parent="Game_Finished/Parallax/Foreground Vines Back/Parallax Bottom"]
material = SubResource("ShaderMaterial_q6ghb")
texture = ExtResource("7_3wff0")
centered = false
region_rect = Rect2(0, 0, 7680, 1440)

[node name="parallax_foreground_vines_p2" type="Sprite2D" parent="Game_Finished/Parallax/Foreground Vines Back/Parallax Bottom"]
z_index = -1
material = SubResource("ShaderMaterial_q6ghb")
position = Vector2(0, 110)
texture = ExtResource("8_a332d")
centered = false
region_rect = Rect2(0, 0, 7680, 1440)

[node name="parallax_foreground_bottom" type="Sprite2D" parent="Game_Finished/Parallax/Foreground Vines Back/Parallax Bottom"]
position = Vector2(1285, 947)
texture = ExtResource("9_qlshg")
region_rect = Rect2(0, 0, 7680, 1440)

[node name="Finish_Cam" type="Camera2D" parent="Game_Finished"]
limit_top = 0
limit_bottom = 0

[node name="Control" type="Control" parent="Game_Finished"]
visible = false
z_index = 4
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1280.0
offset_top = 720.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2

[node name="thx_label" type="Label" parent="Game_Finished/Control"]
visible = false
modulate = Color(1, 1, 1, 0)
texture_filter = 4
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.0
offset_top = -43.0
offset_right = 392.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(392, 43)
theme_override_fonts/font = ExtResource("5_d6mj7")
theme_override_font_sizes/font_size = 70
text = "THANK YOU FOR PLAYING! :)"
horizontal_alignment = 1
vertical_alignment = 1
